--- a/src/app/main-outer/main-outer.component.html
+++ b/src/app/main-outer/main-outer.component.html
@@ -1,1 +1,15 @@
-<p>main-outer works!</p>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col">
+      <h1 style="text-align: center">Main Component</h1>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <app-inner (eventEmit)="onEventEmit($event)"></app-inner>
+    </div>
+    <div class="col">
+      <app-inner (eventEmit)="onEventEmit($event)"></app-inner>
+    </div>
+  </div>
+</div>
